--- a/Server/package.json
+++ b/Server/package.json
@@ -6,10 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "joi": "^13.5.2",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
   }
