--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "joi": "^13.5.2",
+    "mongoose": "^5.2.6",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
   }
