--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "affiammuta",
     "version": "0.0.0",
     "scripts": {
-      "postinstall": "npm install --prefix server",
-      "start" : "npm start --prefix server"
+      "postinstall": "npm install --prefix ./Server",
+      "start" : "npm start --prefix ./Server"
     }
   }
