--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
     "joi": "^13.5.2",
     "mongoose": "^5.2.6",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.7",
     "pug": "2.0.0-beta11"
   }
 }
