--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,8 @@
     "mongoose": "^5.2.6",
     "morgan": "~1.9.0",
     "nodemailer": "^4.6.7",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "pug": "2.0.0-beta11"
   }
 }
