--- a/Server/package.json
+++ b/Server/package.json
@@ -9,7 +9,9 @@
     "bcrypt": "^3.0.0",
     "cloudinary": "^1.11.0",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
@@ -23,6 +25,7 @@
     "passport-facebook": "^2.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "paystack-api": "^1.0.3",
     "pug": "2.0.0-beta11",
     "resolve-from-npm": "^3.1.0"
   }
