--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
@@ -21,6 +21,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
+    "nodemon": "^1.18.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-jwt": "^4.0.0",
